--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -21,9 +21,9 @@ body {
 .toolbar-item {
     position: relative;
     display: block;
-    height: 40px;
+    height: 34px;
     float: left;
-    padding: 0 10px;
+    padding: 3px 10px;
     color: #fff;
     text-decoration: none;
     transition: color 0.5s ease 0s;
@@ -33,20 +33,18 @@ body {
     .toolbar-item.sml:hover {
         color: #52a3f5;
         cursor: pointer;
-        height: 37px;
-        border-bottom: 3px solid #8f9194;
+        padding-top: 0;
+        border-top: 3px solid #52a3f5;
     }
     
         .toolbar-item.dropdown:hover {
             border: 0;
-            height: 40px;
         }
     
         .toolbar-item.space:hover {
             cursor: auto;
-            background: transparent;
             border: 0;
-            height: 40px;
+            padding-top: 3px;
         }
 
     .toolbar-item i {
@@ -64,8 +62,8 @@ body {
     }
 
 .toolbar-item.active {
-    height: 37px;
-    border-bottom: 3px solid #52a3f5;
+    padding-top: 0;
+    border-top: 3px solid #52a3f5;
     color: #52a3f5;
 }
 
@@ -76,20 +74,21 @@ body {
 .toolbar-item.dropdown {
     position: relative;
     padding: 0;
+    height: 40px;
 }
 
     .toolbar-item.dropdown .dropdown-toggle {
-        padding: 0 10px;
         color: #fff;
         display: block;
-        height: 100%;
+        height: 34px;
+        padding: 3px 10px;
         text-decoration: none;
         transition: color 0.5s ease 0s;
     }
 
         .toolbar-item.dropdown .dropdown-toggle:hover {
-            height: 37px;
-            border-bottom: 3px solid #8f9194;
+            padding-top: 0;
+            border-top: 3px solid #52a3f5;
             color: #52a3f5;
         }
 
@@ -143,7 +142,7 @@ body {
                 .toolbar-item.dropdown ul li.dropdown-item:hover a {
                     color: #fff;
                     cursor: pointer;
-                    border-left: 3px solid #8f9194;
+                    border-left: 3px solid #52a3f5;
                     padding-left: 27px;
                 }
 
